// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config checks Config Structure 1`] = `
Object {
  "applyBabelToTypescriptCode": true,
  "getComponentRoots": [Function],
  "getExceptionForLoaders": [Function],
  "getSections": [Function],
  "getWebpackConfig": [Function],
  "hasResizableSandbox": false,
  "legendFontSize": 30,
  "placeholderFontSize": 30,
  "sandboxMaxWidth": undefined,
  "sandboxMinWidth": undefined,
}
`;

exports[`Config checks Config getComponentRoots 1`] = `
Array [
  "src",
]
`;

exports[`Config checks Config getExceptionForLoaders 1`] = `
Object {
  "jsLoader": Array [
    /spec\\\\\\.jsx\\$/,
  ],
}
`;

exports[`Config checks Config getSections 1`] = `
Array [
  "error-boundary",
  "component",
]
`;

exports[`Config checks Config getWebpackConfig 1`] = `
Array [
  "src",
  "node_modules",
]
`;
